[gd_scene load_steps=3 format=3 uid="uid://dm87npbvgb0c4"]

[ext_resource type="Texture2D" uid="uid://4sc2fo6k0b40" path="res://assets/sprites/white.png" id="1_cr101"]
[ext_resource type="Script" uid="uid://b2qroslnjx7im" path="res://scripts/settings.gd" id="1_wswnh"]

[node name="Settings" type="Control"]
z_index = 999
layout_mode = 3
anchor_left = 0.135
anchor_top = 0.134
anchor_right = 0.86500007
anchor_bottom = 0.86500007
offset_left = -0.10925293
offset_top = 0.27999878
offset_right = 0.10925293
offset_bottom = 0.079956055
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_wswnh")

[node name="Settings Menu" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Settings Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="Settings Menu"]
self_modulate = Color(0, 0, 0, 0.60784316)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("1_cr101")

[node name="Close Button" type="Button" parent="Settings Menu"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -128.0
offset_bottom = 128.0
grow_horizontal = 0

[node name="Close Text" type="RichTextLabel" parent="Settings Menu/Close Button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/outline_size = 8
theme_override_font_sizes/normal_font_size = 48
bbcode_enabled = true
text = "X"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="Settings Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -3.0907593
offset_top = 16.140015
offset_right = -3.090332
offset_bottom = 31.859985
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/separation = 32

[node name="Header" type="RichTextLabel" parent="Settings Menu/VBoxContainer2"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/outline_size = 8
theme_override_font_sizes/normal_font_size = 48
bbcode_enabled = true
text = "Settings"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="Subtext" type="RichTextLabel" parent="Settings Menu/VBoxContainer2"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/outline_size = 8
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true
text = "Description:"
fit_content = true
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Settings Menu/VBoxContainer2"]
custom_minimum_size = Vector2(0, 512)
layout_mode = 2
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Settings Menu/VBoxContainer2/ScrollContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 16

[node name="Header" type="RichTextLabel" parent="Settings Menu/VBoxContainer2/ScrollContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/outline_size = 8
theme_override_font_sizes/normal_font_size = 48
bbcode_enabled = true
text = "Visuals"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="Fullscreen Setting" type="HBoxContainer" parent="Settings Menu/VBoxContainer2/ScrollContainer/VBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(1400, 64)
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 32
alignment = 1

[node name="Subtext" type="RichTextLabel" parent="Settings Menu/VBoxContainer2/ScrollContainer/VBoxContainer/Fullscreen Setting"]
custom_minimum_size = Vector2(360, 0)
layout_mode = 2
theme_override_constants/outline_size = 8
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true
text = "Fullscreen"
fit_content = true
horizontal_alignment = 2
vertical_alignment = 1

[node name="Fullscreen Button" type="CheckButton" parent="Settings Menu/VBoxContainer2/ScrollContainer/VBoxContainer/Fullscreen Setting"]
unique_name_in_owner = true
custom_minimum_size = Vector2(256, 32)
layout_mode = 2
expand_icon = true

[node name="Resolution Setting" type="HBoxContainer" parent="Settings Menu/VBoxContainer2/ScrollContainer/VBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(1400, 64)
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 32
alignment = 1

[node name="Subtext" type="RichTextLabel" parent="Settings Menu/VBoxContainer2/ScrollContainer/VBoxContainer/Resolution Setting"]
custom_minimum_size = Vector2(360, 0)
layout_mode = 2
mouse_filter = 2
theme_override_constants/outline_size = 8
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true
text = "Resolution
"
fit_content = true
horizontal_alignment = 2
vertical_alignment = 1

[node name="Resolution Option Button" type="OptionButton" parent="Settings Menu/VBoxContainer2/ScrollContainer/VBoxContainer/Resolution Setting"]
unique_name_in_owner = true
layout_mode = 2

[node name="Framerate Cap Setting2" type="HBoxContainer" parent="Settings Menu/VBoxContainer2/ScrollContainer/VBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(1400, 64)
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 32
alignment = 1

[node name="Subtext" type="RichTextLabel" parent="Settings Menu/VBoxContainer2/ScrollContainer/VBoxContainer/Framerate Cap Setting2"]
custom_minimum_size = Vector2(360, 0)
layout_mode = 2
mouse_filter = 2
theme_override_constants/outline_size = 8
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true
text = "Framerate Cap"
fit_content = true
horizontal_alignment = 2
vertical_alignment = 1

[node name="Framerate Cap Option Button" type="OptionButton" parent="Settings Menu/VBoxContainer2/ScrollContainer/VBoxContainer/Framerate Cap Setting2"]
unique_name_in_owner = true
layout_mode = 2

[node name="Header2" type="RichTextLabel" parent="Settings Menu/VBoxContainer2/ScrollContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/outline_size = 8
theme_override_font_sizes/normal_font_size = 48
bbcode_enabled = true
text = "General"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="Folder Path Setting" type="HBoxContainer" parent="Settings Menu/VBoxContainer2/ScrollContainer/VBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(1400, 64)
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 32
alignment = 1

[node name="Subtext" type="RichTextLabel" parent="Settings Menu/VBoxContainer2/ScrollContainer/VBoxContainer/Folder Path Setting"]
custom_minimum_size = Vector2(360, 0)
layout_mode = 2
theme_override_constants/outline_size = 8
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true
text = "Folder Path"
fit_content = true
horizontal_alignment = 2
vertical_alignment = 1

[node name="Map Path Text" type="RichTextLabel" parent="Settings Menu/VBoxContainer2/ScrollContainer/VBoxContainer/Folder Path Setting"]
unique_name_in_owner = true
custom_minimum_size = Vector2(512, 0)
layout_mode = 2
bbcode_enabled = true
text = "path"
autowrap_mode = 1
vertical_alignment = 1

[node name="Map Editor Button" type="Button" parent="Settings Menu/VBoxContainer2/ScrollContainer/VBoxContainer/Folder Path Setting"]
custom_minimum_size = Vector2(256, 64)
layout_mode = 2

[node name="Start Text" type="RichTextLabel" parent="Settings Menu/VBoxContainer2/ScrollContainer/VBoxContainer/Folder Path Setting/Map Editor Button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/outline_size = 8
theme_override_font_sizes/normal_font_size = 28
bbcode_enabled = true
text = "Change Path"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="Set Map Folder" type="FileDialog" parent="Settings Menu/VBoxContainer2/ScrollContainer/VBoxContainer/Folder Path Setting"]
unique_name_in_owner = true
canvas_item_default_texture_filter = 0
oversampling_override = 1.0
title = "Open a Directory"
initial_position = 1
size = Vector2i(1280, 720)
file_mode = 2
access = 2

[node name="Apply Settings Button" type="Button" parent="Settings Menu"]
custom_minimum_size = Vector2(256, 64)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -64.0
offset_right = 256.0
grow_vertical = 0

[node name="Start Text" type="RichTextLabel" parent="Settings Menu/Apply Settings Button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/outline_size = 8
theme_override_font_sizes/normal_font_size = 28
bbcode_enabled = true
text = "Apply Settings"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="Timer" type="Timer" parent="."]
process_callback = 0
wait_time = 0.05
one_shot = true
autostart = true

[connection signal="pressed" from="Settings Menu/Close Button" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="Settings Menu/VBoxContainer2/ScrollContainer/VBoxContainer/Fullscreen Setting/Fullscreen Button" to="." method="_on_fullscreen_button_pressed"]
[connection signal="item_selected" from="Settings Menu/VBoxContainer2/ScrollContainer/VBoxContainer/Resolution Setting/Resolution Option Button" to="." method="_on_resolution_option_button_item_selected"]
[connection signal="item_selected" from="Settings Menu/VBoxContainer2/ScrollContainer/VBoxContainer/Framerate Cap Setting2/Framerate Cap Option Button" to="." method="_on_framerate_cap_option_button_item_selected"]
[connection signal="pressed" from="Settings Menu/VBoxContainer2/ScrollContainer/VBoxContainer/Folder Path Setting/Map Editor Button" to="." method="_on_map_editor_button_pressed"]
[connection signal="dir_selected" from="Settings Menu/VBoxContainer2/ScrollContainer/VBoxContainer/Folder Path Setting/Set Map Folder" to="." method="_on_set_map_folder_dir_selected"]
[connection signal="pressed" from="Settings Menu/Apply Settings Button" to="." method="_update_settings"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
